--- a/APOGEE_data_tutorial.ver3comp.ipynb
+++ b/APOGEE_data_tutorial.ver3comp.ipynb
@@ -25,21 +25,17 @@
   {
    "cells": [
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
-      "#APOGEE Data:  \"Zero to Hero\"\n",
-      "TODO Add TOC\n",
-      "[Description](#Description)"
+      "APOGEE Data:  \"Zero to Hero\""
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Description\n",
-      "=============\n",
-      "\n",
       "### What this is\n",
       "\n",
       "  An exectuable, interactive Ipython Notebook designed to quickly get\n",
@@ -72,12 +68,6 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Sources/Thanks\n",
-      "================\n",
-      "\n",
-      "  The material herein is a result of the whole APOGEE team.\n",
-      "\n",
-      "\n",
       "Requirements\n",
       "==============\n",
       "\n",
@@ -1042,12 +1032,12 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "12.1 Reading the RC Catalog"
+      "12.2 Reading the RC Catalog"
      ]
     },
     {
      "cell_type": "code",
-     "collapsed": true,
+     "collapsed": false,
      "input": [
       "#Make sure the urllib module has been imported and geturl_func has been defined!\n",
       "\n",
@@ -1121,70 +1111,68 @@
     },
     {
      "cell_type": "heading",
-     "level": 2,
+     "level": 1,
      "metadata": {},
      "source": [
-      "Individual Spectrum plotting"
+      "13 Introduction to Individual Spectra"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "need locationID and APOGEE_ID. mention dir_structure aspcap_run, reduction_run, version #, http://www.sdss.org/dr12/irspec/spectra/\n",
+      "In additional to stellar parameters and abundances, APOGEE releases all the spectra it collects in various stages of the reduction pipele. In general, there are three types of spectra you might be interested in.\n",
       "\n",
-      "APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/LOCATION_ID; see datamodel)\n",
+      "| Type | Description\n",
+      "|-----:|:-----|\n",
+      "|Combined spectra |from all visits to a star are available in apStar files.|\n",
+      "|Individual visit spectra |of each visit to each star are available in apVisit files.|\n",
+      "|Pseudo-continuum normalized spectra| that are used in the derivation of stellar parameters are available in aspcapStar files.|\n",
       "\n",
-      "http://data.sdss3.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/LOCATION_ID/aspcapStar.html\n",
+      "You will find the above table at the [Using APOGEE Spectra](http://www.sdss.org/dr12/irspec/spectra/)  documentation. If you plan on working with individual spectra in the future, make sure to read [Using APOGEE Spectra](http://www.sdss.org/dr12/irspec/spectra/) first to find out how the spectra are produced, important caveats, data quality flags, and directory structure. Refer to Holtzman et al. (2015) for further details.  \n",
       "\n",
-      "http://www.sdss.org/dr12/irspec/spectro_data/\n",
+      "Below, we will plot both the raw data and best-fitting ASPCAP model to the pseudo-continuum normalized spectra of a single star. The method below is easily generalizable to any APOGEE spectrum of this type. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 13.1 Spectra Directory Structure and Filename Conventions\n",
       "\n",
-      "todo: description, prettier plot of spectrum and model, show full wavelength coverage."
+      "APOGEE spectra are organized differently depending on their type. ASPCAP spectra (psuedo-continuum normalized spectra) are stored according to their field. The field associated with an ASPCAP spectrum is encoded in the `LOCATION_ID` field of the `allStar` file. \n",
+      "\n",
+      "The ASPCAP spectrum directory structure is\n",
+      ">APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/LOCATION_ID  \n",
+      "\n",
+      "where from\n",
+      "[APOGEE Reduction Version Numbers](http://www.sdss.org/dr12/irspec/spectro_data/#ReductionVersionNumbers)\n",
+      "\n",
+      "|||\n",
+      "|-\n",
+      "|APRED_VERS| denotes the version of the basic spectra reduction used to generate the visit spectra.|\n",
+      "|APSTAR_VERS| denotes the version of the code used to combine individual visit spectra into higher signal-to-noise, resampled, combined spectra.|\n",
+      "|ASPCAP_VERS |denotes the version of the code used to determine the stellar atmospheric parameters for each combined spectrum.|\n",
+      "|RESULTS_VERS| denotes the version of the code used to (1) compile the final results, and (2) apply additional empirical corrections and set data quality flags based on evaluation of results for calibration objects. A given RESULTS_VERS implies versions of all of the preceding steps, and thus uniquely identifies the full set of software used.|\n",
+      "\n",
+      "The DR12 reduction versions:\n",
+      "\n",
+      "|APRED_VERS | APSTAR_VERS |ASPCAP_VERS | RESULTS_VERS|\n",
+      "|---::--|-----:---|----:----|----:----|\n",
+      "|r5| stars|  l25_6d |v603|\n",
+      "\n",
+      "Finally, the ASPCAP specta are stored as FITS files with the following [SAS URL format](www.sdss.org/dr12/irspec/spectro_data/index.html#IntermediateDataProducts): \n",
+      "> aspcapStar-APRED_VERS-RESULTS_VERS-STARNAME.fits  \n",
+      "\n",
+      "STARNAME is the `APOGEE_ID` field found in the `allStar` catalog. Let's see how this works for a \"random\" (the quotes will be explained later) main survey star. Below, we will grab the aspcapStar (ASPCAP spectrum file) for the 17301st star in the `mainStar` sample defined in Section 8.\n"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "indx = 17301\n",
-      "locID = mainStar['LOCATION_ID'][indx]\n",
-      "apoID = mainStar['APOGEE_ID'][indx]\n",
-      "spectra_link = 'http://data.sdss3.org/sas/dr12/apogee/spectro/redux/r5/stars/l25_6d/v603/{0}/aspcapStar-r5-v603-{1}.fits'.format(locID,apoID)\n",
-      "spectra_filename = 'aspcapStar-r5-v603-{0}.fits'.format(apoID)\n",
-      "localspectralpath = os.path.join(data_directory,spectra_filename)\n",
-      "if not os.path.exists(localspectralpath):\n",
-      "    geturl_func(spectra_link, filename=localspectralpath)\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [
-      "apogeeSpectrum = pyfits.open(localspectralpath)\n",
-      "flux = apogeeSpectrum[1].data # flux\n",
-      "model = apogeeSpectrum[3].data # best fit spectrum\n",
-      "error = apogeeSpectrum[2].data # this is the error array\u2423\n",
-      "nlam = len(apogeeSpectrum[1].data)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": null
-    },
-    {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [
-      "start_wl =  apogeeSpectrum[1].header['CRVAL1']\n",
-      "diff_wl = apogeeSpectrum[1].header['CDELT1']\n",
-      "val = diff_wl*(nlam) + start_wl\n",
-      "wl_full_log = np.arange(start_wl,val, diff_wl)\n",
-      "wl_full = [10**aval for aval in wl_full_log]\n",
-      "SNR = apogeeSpectrum[0].header['SNR']"
+      "html_prefix = 'http://data.sdss3.org/sas/dr12/'\n",
+      "APOGEE_REDUX = 'apogee/spectro/redux/'"
      ],
      "language": "python",
      "metadata": {},
@@ -1195,12 +1183,143 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "plt.figure()\n",
-      "plt.plot(wl_full, flux, color = 'k', label='Data')\n",
-      "plt.plot(wl_full, model, color = 'red',alpha=0.5, label='Model')\n",
-      "plt.title(\"ID = \"+str(spectra_filename)+\", SNR = \"+str(np.int(SNR)), fontsize = 12) \n",
-      "plt.ylim(0.8,1.1)\n",
-      "plt.xlim(15200,15700)"
+      "os.path.join(html_prefix, APOGEE_REDUX)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "indx = 17301  # index to grab the star of interest\n",
+      "#The variable names below match the nomenclature introduced in the preceeding cells.\n",
+      "LOCATION_ID = mainStar['LOCATION_ID'][indx] \n",
+      "APOGEE_ID = mainStar['APOGEE_ID'][indx]\n",
+      "html_prefix = 'http://data.sdss3.org/sas/dr12/'\n",
+      "APOGEE_REDUX = 'apogee/spectro/redux/'\n",
+      "APRED_VERS = 'r5'\n",
+      "APSTAR_VERS = 'stars'\n",
+      "ASPCAP_VERS = 'l25_6d'\n",
+      "RESULTS_VERS = 'v603'\n",
+      "\n",
+      "##From above\n",
+      "url_directory = os.path.join(html_prefix,APOGEE_REDUX,APRED_VERS,APSTAR_VERS,ASPCAP_VERS,str(LOCATION_ID))\n",
+      "spectrum_filename = 'aspcapStar-{0}-{1}-{2}.fits'.format(APRED_VERS, RESULTS_VERS, APOGEE_ID)\n",
+      "url_location = os.path.join(url_directory,spectrum_filename)\n",
+      "\n",
+      "#See what we did\n",
+      "print('{0} star of mainStar sample:'.format(indx))\n",
+      "print('APOGEE_ID: {0}\\t LOCATION_ID: {1}'.format(APOGEE_ID, LOCATION_ID))\n",
+      "print('ASPCAP spectrum located in directory:\\n{0}'.format(url_directory))\n",
+      "print('Filename: {0}'.format(spectrum_filename))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 13.2 Download Spectrum\n",
+      "\n",
+      "Formatting `url_location` properly is the hardest part of obtaining an APOGEE spectrum. Now, just download it!"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "#First check to see if the file already exists, no sense in downloading it again.\n",
+      "\n",
+      "local_spectrum_path = os.path.join(data_directory,spectrum_filename)\n",
+      "if not os.path.exists(local_spectrum_path):\n",
+      "    geturl_func(url_location, filename=local_spectrum_path)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 13.3 Anatomy of ASPCAP Spectrum File\n",
+      "\n",
+      "The ASPCAP spectrum [data model](http://data.sdss3.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/LOCATION_ID/aspcapStar.html)  describes the structure of the ASPCAP spectum FITS file."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [
+      "apogeeSpectrum = pyfits.open(local_spectrum_path) # Open and read spectrum FITS table\n",
+      "\n",
+      "flux = apogeeSpectrum[1].data # HDU1: Pseudo-continumm normalized flux\n",
+      "model = apogeeSpectrum[3].data # HDU3: Best fit model spectrum\n",
+      "error = apogeeSpectrum[2].data # HDU1: Pseudo-continumm normalized flux\n",
+      "nlambda = apogeeSpectrum[1].data.shape[0] # The number of "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The arrays `flux`, `model`, and `error` are 1-D arrays representing the normalized flux of each component at `nlambda` different wavelengths ($\\lambda$). Note that $\\lambda$ are stored as $\\log{\\lambda}$ per the [data model](http://data.sdss3.org/datamodel/files/APOGEE_REDUX/APRED_VERS/APSTAR_VERS/ASPCAP_VERS/RESULTS_VERS/LOCATION_ID/aspcapStar.html). Now let's determine the wavelength range for this star's spectrum."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "wavelength_start = apogeeSpectrum[1].header['CRVAL1'] #access starting wavelength [log lambda]\n",
+      "disperion = apogeeSpectrum[1].header['CDELT1'] #Dispersion [log lambda]\n",
+      "wavelength_end = disperion*(nlambda) + wavelength_start\n",
+      "loglambda_range = np.arange(wavelength_start,wavelength_end,disperion)\n",
+      "lambda_range = 10**loglambda_range  #make the scale linear \n",
+      "SNR = apogeeSpectrum[0].header['SNR'] #note the SNR for plotting"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## 13.4 Plotting Individual Spectra\n",
+      "\n",
+      "We have computed the wavelength range and read the data and model flux. Below we divide the plot into 3 subplots to highlight the blue, green, and red chips (see [Wavelength Coverage]( http://www.sdss.org/dr12/irspec/spectra/#WavelengthCoverageandDetectorGaps) for details)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fig,axs = plt.subplots(nrows=3, ncols=1)\n",
+      "axs[0].plot(lambda_range, flux, color = 'k', label='Data')\n",
+      "axs[0].plot(lambda_range, model, color = 'red',alpha=0.5, label='Model')\n",
+      "axs[0].set_xlim(15160,15795)\n",
+      "axs[0].legend(loc='lower right')\n",
+      "axs[1].plot(lambda_range, flux, color = 'k', label='Data')\n",
+      "axs[1].plot(lambda_range, model, color = 'red',alpha=0.5, label='Model')\n",
+      "axs[1].set_ylabel('Normalized Flux', fontsize=25)\n",
+      "axs[1].set_xlim(15875, 16420)\n",
+      "axs[2].plot(lambda_range, flux, color = 'k', label='Data')\n",
+      "axs[2].plot(lambda_range, model, color = 'red',alpha=0.5, label='Model')\n",
+      "axs[2].set_xlim(16495, 16940)\n",
+      "axs[2].set_xlabel('Wavelength [Angstroms]')\n",
+      "axs[0].set_title(\"ID = \"+str(spectrum_filename)+\", SNR = \"+str(np.int(SNR)), fontsize = 12) \n"
      ],
      "language": "python",
      "metadata": {},
@@ -1212,63 +1331,37 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Finished! Cells below are notes/snippets for me until next week"
+      "You've completed the APOGEE \"Zero to Hero\" data interaction tutorial."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Nidever + \n",
-      "other papers\n",
+      "Sources/Thanks\n",
+      "================\n",
       "\n",
-      "Optional:\n",
+      "  The material herein is a result of the whole APOGEE team. Special thanks to Jon Holtzman, Melissa Ness, Jo Bovy, Carlos Allende Prieto, and many others. Written by Jonathan Bird.\n",
       "\n",
-      "  + APOGEE module [[https://github.com/jobovy/apogee]] Jo Bovy has\n",
-      "    written an excellent python module designed to interact and\n",
-      "    manipulate APOGEE data. It simplifies many of the basic operations\n",
-      "    we will cover below and also provides more advanced tools for\n",
-      "    dealing with individual APOGEE spectra. Highly recommended!\n"
+      "\n"
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [
-      "#### Option 2: `APOGEE`\n",
-      "\n",
-      "\n",
-      "#We refer the user to [[https://github.com/jobovy/apogee]] for\n",
-      "#  installation instuctions and assume you have a working install in the\n",
-      "#  remainder of the notebook.\n",
-      "os.environ['APOGEE_DATA'] = data_directory\n",
-      "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
-      "\n",
-      "import apogee.tools.read as apread\n",
-      "allStar= apread.allStar()  #will automatically download if catalog not available\n",
-      "print (\"AllStar file Loaded\")\n"
-     ],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "source": [
+      "Further Reading"
+     ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "## 12.2 `apogee`  option (if running the cell below, you must have SKIPPED the `pyfits` module option above)\n",
-      "os.environ['APOGEE_DATA'] = data_directory\n",
-      "os.environ['APOGEE_REDUX'] = 'v603' #DR12 reduction version\n",
-      "\n",
-      "import apogee.tools.read as apread\n",
-      "allRC= apread.rcsample()  #will automatically download if catalog not available\n",
-      "print (\"Red Clump catalog file Loaded\")\n"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": null
+     "source": [
+      "## The APOGEE python module\n",
+      "\n",
+      "Jo Bovy has written the excellent and well-documented [APOGEE](https://github.com/jobovy/apogee). It has convenient shortcuts for many of the operations in this tutorial and contains powerful tools for analyzing APOGEE spectra. This is *the* module for you if you're a pythonista (or an aspiring one) and want to work with APOGEE data. https://github.com/jobovy/apogee"
+     ]
     }
    ],
    "metadata": {}
