pre-Madrid final

--- a/APOGEE_data_tutorial.ver2comp.ipynb
+++ b/APOGEE_data_tutorial.ver2comp.ipynb
@@ -345,11 +345,7 @@
       "7.1 Sky map of the APOGEE Catalog", 
       "-----------------------------------", 
       "", 
-      "  Now that you have loaded the catalog, we can make our first plot! Let's make a sky map of the APOGEE catalog.", 
-      "", 
-      "  - Maybe mention Kepler field here", 
-      "  - Need to ask Gail about her plots", 
-      ""
+      "  Now that you have loaded the catalog, we can make our first plot! Let's make a sky map of the APOGEE catalog."
      ]
     }, 
     {
@@ -909,7 +905,7 @@
      "cell_type": "markdown", 
      "metadata": {}, 
      "source": [
-      "Awesome! We now see the metallicity of the central region of the Galaxy as a function of position. **Comment on metallicity gradient** *TODO SOON*"
+      "Awesome! We now see the metallicity of the central region of the Galaxy as a function of position. The metallicity gradient from low longitude, metal-rich areas to high longitude, metal-poor areas is clearly visible."
      ]
     }, 
     {
