--- a/APOGEE_data_tutorial.ver3comp.ipynb
+++ b/APOGEE_data_tutorial.ver3comp.ipynb
@@ -344,11 +344,7 @@
       "7.1 Sky map of the APOGEE Catalog\n",
       "-----------------------------------\n",
       "\n",
-      "  Now that you have loaded the catalog, we can make our first plot! Let's make a sky map of the APOGEE catalog.\n",
-      "\n",
-      "  - Maybe mention Kepler field here\n",
-      "  - Need to ask Gail about her plots\n",
-      "\n"
+      "  Now that you have loaded the catalog, we can make our first plot! Let's make a sky map of the APOGEE catalog.\n"
      ]
     },
     {
@@ -908,7 +904,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Awesome! We now see the metallicity of the central region of the Galaxy as a function of position. **Comment on metallicity gradient** *TODO SOON*"
+      "Awesome! We now see the metallicity of the central region of the Galaxy as a function of position. The metallicity gradient from low longitude, metal-rich areas to high longitude, metal-poor areas is clearly visible."
      ]
     },
     {
